--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,8 +1,11 @@
 #使うDockerイメージ
-FROM mysql:8.0
+FROM mysql
+
 #ポートを開ける
 EXPOSE 3306
+
 #MySQL設定ファイルをイメージ内にコピー
 ADD ./my.cnf /etc/mysql/conf.d/my.cnf
+
 #docker runに実行される
-CMD ["mysql"]
+CMD ["mysqld"]
