docker file modify

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,28 @@
-# version: "3" # composeファイルのバージョン
-# services: 
-    # app: # コンテナ名
-    #     build: . # ビルドに使うDockerfileの場所
-    #     tty: true # コンテナの永続化s
-    #     ports: # ホストOSのポートとコンテナのポートをつなげる 
-    #         - "8080:8080"
-    #     volumes:
-    #         - ./app:/go/src/app # マウントディレクトリ
-    #     depends_on: 
-    #         - mysql
+version: "3" # composeファイルのバージョン
+services: 
+    app: # コンテナ名
+        build: . # ビルドに使うDockerfileの場所
+        command: /bin/sh -c "go run main.go"
+        tty: true # コンテナの永続化s
+        ports: # ホストOSのポートとコンテナのポートをつなげる 
+            - "8080:8080"
+        volumes:
+            - ./app:/go/src/app # マウントディレクトリ
+        depends_on: 
+            - mysql
 
-    # mysql:
-    #     build: ./mysql/
-    #     volumes:
-    #         # 初期データを投入するSQLが格納されているdir
-    #         - ./mysql/init:/docker-entrypoint-initdb.d
-    #         永続化するときにマウントするdir
-    #         - ./mysql/data:/var/lib/mysql
-    #     image: 
-    #         - original_mysql_world # イメージの名前
-    #     environment: 
-    #         - MYSQL_ROOT_PASSWORD=
-    #     ports:
-    #         - "3306:3306"
+    mysql:
+        build: ./mysql/    #Dockerfileからビルドすることを示す
+        volumes:
+          - ./mysql/db:/docker-entrypoint-initdb.d  #初期データをマウントする場所
+        image: original_mysql_world # イメージの名前
+        environment:
+          - MYSQL_ROOT_USER=root
+          - MYSQL_ROOT_PASSWORD=taitasu2 #コンテナ内のMySQLを起動する際のパスワードを設定
+          - MYSQL_ROOT_HOST=% 
+        ports: 
+          - "3307:3306"
 
-# versionは3系が最新版で、versionによって書き方が異なる
-version: "3"
-services:
-  mysql:
-    build: ./mysql/    #Dockerfileからビルドすることを示す
-    volumes:
-      - ./mysql/db:/docker-entrypoint-initdb.d  #初期データをマウントする場所
-    image: original_mysql_world # イメージの名前
-    environment:
-      - MYSQL_ROOT_PASSWORD=****   #コンテナ内のMySQLを起動する際のパスワードを設定
+
+
+     
