--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -7,5 +7,7 @@ EXPOSE 3306
 #MySQL設定ファイルをイメージ内にコピー
 ADD ./my.cnf /etc/mysql/conf.d/my.cnf
 
+#COPY init/* /docker-entrypoint-initdb.d/
+
 #docker runに実行される
 CMD ["mysqld"]
